<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.inicio.InicioFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_freelance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imagen_card_workhome"
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:contentDescription="@string/imagen_row"
                        android:scaleType="fitCenter"
                        tools:srcCompat="@drawable/workhome" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/tommy"
                            android:text="@string/menu_gd_freelance"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/clab"
                            android:text="@string/slogan_freelance"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />

                    </LinearLayout>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_aplicaciones"
                        android:layout_width="185dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imagen_card_aplicaciones"
                                android:layout_width="match_parent"
                                android:layout_height="194dp"
                                android:contentDescription="@string/imagen_row"
                                android:scaleType="fitCenter"
                                tools:srcCompat="@tools:sample/backgrounds/scenic" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/tommy"
                                    android:text="@string/menu_gd_aplicaciones"
                                    android:textAppearance="?attr/textAppearanceHeadline6" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:fontFamily="@font/clab"
                                    android:text="@string/slogan_aplicaciones"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary" />

                            </LinearLayout>


                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_criptomonedas"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imagen_card_criptomonedas"
                                android:layout_width="match_parent"
                                android:layout_height="194dp"
                                android:contentDescription="@string/imagen_row"
                                android:scaleType="fitCenter"
                                tools:srcCompat="@tools:sample/backgrounds/scenic" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/tommy"
                                    android:text="@string/menu_gd_criptomonedas"
                                    android:textAppearance="?attr/textAppearanceHeadline6" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:fontFamily="@font/clab"
                                    android:text="@string/slogan_criptomonedas"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary" />

                            </LinearLayout>


                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_publicidad"
                        android:layout_width="185dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imagen_card_publicidad"
                                android:layout_width="match_parent"
                                android:layout_height="194dp"
                                android:contentDescription="@string/imagen_row"
                                android:scaleType="fitCenter"
                                tools:srcCompat="@tools:sample/backgrounds/scenic" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/tommy"
                                    android:text="@string/menu_gd_publicicadad"
                                    android:textAppearance="?attr/textAppearanceHeadline6" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:fontFamily="@font/clab"
                                    android:text="@string/slogan_publicidad"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary" />

                            </LinearLayout>


                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_desarrollando"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imagen_card_desarrollo"
                                android:layout_width="match_parent"
                                android:layout_height="194dp"
                                android:contentDescription="@string/imagen_row"
                                android:scaleType="fitCenter"
                                tools:srcCompat="@tools:sample/backgrounds/scenic" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/tommy"
                                    android:text="@string/menu_gd_desarrollando"
                                    android:textAppearance="?attr/textAppearanceHeadline6" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:fontFamily="@font/clab"
                                    android:text="@string/slogan_desarrollando"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary" />

                            </LinearLayout>


                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_videos"
                        android:layout_width="185dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imagen_card_videos"
                                android:layout_width="match_parent"
                                android:layout_height="194dp"
                                android:contentDescription="@string/imagen_row"
                                android:scaleType="fitCenter"
                                tools:srcCompat="@tools:sample/backgrounds/scenic" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/tommy"
                                    android:text="@string/menu_gd_videos"
                                    android:textAppearance="?attr/textAppearanceHeadline6" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:fontFamily="@font/clab"
                                    android:text="@string/slogan_videos"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary" />

                            </LinearLayout>


                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_vendiendo"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imagen_card_vendiendo"
                                android:layout_width="match_parent"
                                android:layout_height="194dp"
                                android:contentDescription="@string/imagen_row"
                                android:scaleType="fitCenter"
                                tools:srcCompat="@tools:sample/backgrounds/scenic" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/tommy"
                                    android:text="@string/menu_gd_vendiendo"
                                    android:textAppearance="?attr/textAppearanceHeadline6" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:fontFamily="@font/clab"
                                    android:text="@string/slogan_vendiendo"
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary" />

                            </LinearLayout>


                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </TableRow>

            </TableLayout>
        </LinearLayout>


    </ScrollView>
</LinearLayout>