<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="335dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/imagen_row_desarrollo"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerInside"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />


            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/titulo_row_desarrollo"
                    android:text="@string/titulo_row"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/raleway_semibold"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/fecha_row_desarrollo"
                    android:layout_width="match_parent"
                    android:padding="2dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_light"
                    android:text="@string/fecha_row"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"/>

                <TextView
                    android:id="@+id/descripcion_row_desarrollo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:fontFamily="@font/raleway_regular"
                    android:maxHeight="150dp"
                    android:padding="10dp"
                    android:text="@string/descripcion_row"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"/>

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>